--- a/bin/config.properties
+++ b/bin/config.properties
@@ -10,3 +10,8 @@ statement_denoter=resources/synset/statement_denoter\.txt
 thoughtevent_denoter=resources/synset/thoughtevent_denoter\.txt
 tempXML=temp/tempXMLFile\.xml
 denoterDirectory=resources/synset/
+wordFilePath=E:/workspaces/eclipse4.4_64/OnlineAnno/WebContent/files/
+txtFilePath=E:/workspaces/eclipse4.4_64/OnlineAnno/WebContent/files/
+annoFilePath=E:/workspaces/eclipse4.4_64/OnlineAnno/WebContent/files/
+EventParticipantDictory=data/dictionary/custom/ParticipantDictionary.txt
+EventLocationDictory=data/dictionary/custom/LocationDictionary.txt
